@@ -1,0 +1,9 @@
+ETCD_NAME=osd-etcd
+ETCD_DATA_DIR=/var/lib/etcd
+ETCD_LISTEN_CLIENT_URLS={{ protocol }}://0.0.0.0:2379
+ETCD_ADVERTISE_CLIENT_URLS={{ protocol }}://0.0.0.0:2379
+
+{% if use_tls %}
+ETCD_CERT_FILE={{ tls_cert_path }}
+ETCD_KEY_FILE={{ tls_key_path }}
+{% endif %}
